--- a/assets/style/hodext.css
+++ b/assets/style/hodext.css
@@ -1,16 +1,9 @@
-@font-face {
-  font-family: 'Oxygen';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Oxygen Light'), local('Oxygen-Light'),
-    url(Oxygen-Light.woff) format('woff');
-}
-
 body {
   background-color: rgba(20, 20, 20, 0.95);
   color: white;
   overflow: hidden;
-  font-family: 'Oxygen';
+  font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI',
+    'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 300;
   border-radius: 0;
   border: none;
@@ -63,7 +56,6 @@ div.hodext-item p {
 div.hodext-item > div {
   display: none;
   flex-direction: column;
-  padding-left: 6px;
   opacity: 0.8;
 }
 
@@ -71,6 +63,11 @@ div.hodext-item span {
   font-size: 8pt;
   text-align: right;
   line-height: 16px;
+  padding-left: 4px;
+}
+
+div.hodext-item span:last-child {
+  opacity: 0.4;
 }
 
 div.hodext-item.active {
